# swagger.json
@@ -34,6 +34,9 @@
 					"avatarUrl": {
 						"type": "string",
 						"nullable": true
+					},
+					"hasLiked": {
+						"type": "boolean"
 					}
 				},
 				"required": [
@@ -43,7 +46,8 @@
 					"createdAt",
 					"userId",
 					"username",
-					"avatarUrl"
+					"avatarUrl",
+					"hasLiked"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -263,9 +267,9 @@
 		}
 	},
 	"info": {
-		"title": "Instagram Simplified API",
+		"title": "Twitter Simplified API",
 		"version": "1.0.0",
-		"description": "API docs for simplified Instagram backend",
+		"description": "API docs for simplified Twitter backend",
 		"license": {
 			"name": "ISC"
 		},
@@ -365,7 +369,13 @@
 				"tags": [
 					"Tweets"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"optional"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -429,7 +439,13 @@
 				"tags": [
 					"Tweets"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"optional"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "query",
@@ -498,7 +514,13 @@
 				"tags": [
 					"Tweets"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"optional"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
@@ -867,7 +889,13 @@
 				"tags": [
 					"Users & Follows"
 				],
-				"security": [],
+				"security": [
+					{
+						"jwt": [
+							"optional"
+						]
+					}
+				],
 				"parameters": [
 					{
 						"in": "path",
